# ha-ggis-hub

./: .gitattributes  .gitignore  .purpose-audit.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  WRITEUP.md  deny.toml  eslint.config.js  index.html  osv-scanner.toml  package.json  perf-budgets.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  (+1 more)
asm/: xoshiro128_starstar.wat
c/: fnv1a.c
crates/hub-hardlang/: Cargo.toml  build.rs
crates/hub-hardlang/src/: lib.rs
crates/hub-hardlang/tests/: differential_hash.rs  differential_rng.rs
docs/: DEPLOYMENT.md  README.md  glossary.md  style-guide.md
public/: _headers  _redirects  manifest.webmanifest
scripts/: browser-factory.mjs  check-doc-claims.mjs  check-doc-claims.test.ts  check-production.mjs  check-production.test.ts  copy-jfmm-build.mjs  copy-whs-build.mjs  debug-preview.mjs  deploy-config.test.ts  detail-shots.mjs  force-preview.mjs  inspect-shots.mjs  inspect-with-errors.mjs  perf-budgets.mjs  preview-sprite.mjs  rasterize-favicon.mjs  rasterize-og.mjs  render-wario-share-audio.mjs  run-a11y-gate.mjs  run-browser-smokes.mjs  run-determinism-smoke.mjs  run-paint-gate.mjs  run-soak-gate.mjs  run-visual-gate.mjs  screenshot-whs.mjs  screenshot.mjs  smoke-a11y.mjs  smoke-determinism.mjs  smoke-door-launch.mjs  smoke-door-tap.mjs  smoke-locked-door.mjs  smoke-music-toggle.mjs  smoke-outcome.mjs  smoke-outcome.test.ts  smoke-paint-timing.mjs  smoke-pointer-drive.mjs  smoke-reduced-motion.mjs  smoke-replay-log.mjs  smoke-soak.mjs  smoke-visual-gate.mjs  (+3 more)
src/: main.ts  style.css
src/app/: app.ts  (+8 more)
(+170 files in other folders)
