[workspace]
members = [
  "crates/hub-core",
  "crates/hub-wasm",
  "crates/hub-hardlang",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/Giftedx/ha-ggis-hub"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
